syntax = "proto3";

message Empty {}

message Id {
  string id = 1;
}

message IdAccountId {
  string id = 1;
  string account_id = 2;
}

message Status {
  int32 code = 1;
  string message = 2;
}

message Category {
  string id = 1;
  string name = 2;
  // string created_at = 3;
  // string updated_at = 4;
}

message Categories {
  repeated Category categories = 1;
}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string resume = 4;
  float rating = 5;
  string image_url = 6;
  // string created_at = 7;
  // string updated_at = 8;
  repeated Category categories = 9;
}

message Books {
  repeated Book books = 1;
}

message Review {
  string id = 1;
  float rating = 2;
  float pos_neg_rating = 3;
  string resume = 4;
  string book_id = 5;
  string user_name = 6;
  string account_id = 7;
}

message Reviews {
  repeated Review reviews = 1;
}

service BookService {
  rpc Get (Empty) returns (Books) {}
  rpc GetById(Id) returns (Book) {}
  rpc Insert(Book) returns (Status) {}
  rpc Update(Book) returns (Status) {}
  rpc Delete(Id) returns (Status) {}
}

service CategoryService {
  rpc Get (Empty) returns (Categories) {}
  rpc GetById(Id) returns (Category) {}
  rpc Insert(Category) returns (Status) {}
  rpc Update(Category) returns (Status) {}
  rpc Delete(Id) returns (Status) {}
}

service ReviewService {
  rpc Get (Empty) returns (Reviews) {}
  rpc GetByUserId (Id) returns (Reviews) {}
  rpc GetByBookId (Id) returns (Reviews) {}
  rpc GetByAccountId (Id) returns (Reviews) {}
  rpc GetById(Id) returns (Review) {}
  rpc Insert(Review) returns (Status) {}
  // rpc Update(Review) returns (Status) {}
  rpc Delete(IdAccountId) returns (Status) {}
}